--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,7 @@ dependencies:
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
   flutter_secure_storage: ^4.2.1
- 
-  
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
